# milvuslite-kit

./: README.md  config-example.yaml  pyproject.toml  requirements.txt
milvuslite_kit/: __init__.py  exceptions.py  plugin.py
milvuslite_kit/config/: __init__.py  loader.py  validator.py
milvuslite_kit/core/: __init__.py  _milvus.py  client.py  collections.py  indexes.py  schema.py
milvuslite_kit/logging/: __init__.py  logger.py
milvuslite_kit/models/: __init__.py  collection.py  column.py  result.py
milvuslite_kit/operations/: __init__.py  delete.py  insert.py  query.py  search.py
tests/: test_config.py  test_delete.py  test_insert.py  test_query.py  test_schema.py  test_search.py
