[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "milvuslite-kit"
version = "0.1.0"
description = "A lightweight, configuration-driven Python wrapper for Milvus Lite"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pymilvus>=2.4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["milvuslite_kit*"]
